# cov-proxy-model

./: .gitignore  .gitmodules  analysis.ipynb  pyproject.toml  requirements.txt
modeling/: build.py  commands.py  coverage_parser.py  riscv_dv.py
report/: .gitignore  Makefile  references.bib  report.tex
scripts/: combine_scripts_single_config.py  combined_scripts.py  combined_scripts_optimized.py  compile_generator  compile_generator.py  generate_configs.py  generate_elf.py  generate_elves.py  parse_coverages.py  run_all_rtl_sims.py  run_rtl_sim.py  utils.py
tests/: test_coverage_parser.py
