[tool.poetry]
name = "cov-proxy-model"
version = "0.1.0"
description = ""
authors = ["Vighnesh Iyer <vighnesh.iyer@berkeley.edu>"]
readme = "README.md"
packages = [
    {include = "riscv-dv"}
]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
bitstring = "^4.0.1"
pyvsc = "^0.8.1"
tabulate = "^0.9.0"
pandas = "^1.5.2"
mypy = "^0.991"

[tool.poetry.scripts]
run = "riscv_dv.run:main"
cov = "riscv_dv.cov:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
