[tool.poetry]
name = "cov-proxy-model"
version = "0.1.0"
description = ""
authors = ["Vighnesh Iyer <vighnesh.iyer@berkeley.edu>"]
readme = "README.md"
packages = [
    {include = "scripts"},
    {include = "modeling"}
]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
bitstring = "^4.0.1"
pyvsc = "^0.8.1"
tabulate = "^0.9.0"
pandas = "^1.5.2"
mypy = "^0.991"
pydantic = "^1.10.2"
joblib = "^1.2.0"
pytest = "^7.2.0"
jupyterlab = "^3.5.1"
matplotlib = "^3.6.2"
scikit-learn = "^1.2.0"

[tool.poetry.scripts]
compile_generator = "scripts.compile_generator:main"
generate_configs = "scripts.generate_configs:main"
generate_elf = "scripts.generate_elf:main"
generate_elves = "scripts.generate_elves:main"
run_rtl_sim = "scripts.run_rtl_sim:main"
run_all_rtl_sims = "scripts.run_all_rtl_sims:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
